# bam-parser-tutorial

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  parse_bam.cc  parse_bam_from_start.cc  parse_vcf.cc  parse_vcf_by_region.cc
htslib/: CMakeLists.txt
test/: example.vcf.gz.tbi
